fix(workspace): use correct keybinding when using vim+dendron in same workspace
- also fix manual updating of `package.json` configuration

Squashed commit of the following:

commit 26f121b4b0451045e08aa8aa3eb13e1d103be547
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 20:47:44 2021 -0700

    chore: update pkg json

commit 23a8b202fa388ef5c811c03859e71eb0bb44a647
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 20:32:36 2021 -0700

    chore: publish prerelease

commit fd3faab9549c19a40272a34d9e0d3cc129b6d065
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 20:28:23 2021 -0700

    chore: add more logging

commit 86c6b47c70280ee16eabb51fb10cac4f29c1073a
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 18:55:57 2021 -0700

    chore: better log message

commit 4c3a51a15b5c5c8b2dc066db79a7186a422b9e02
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 17:38:50 2021 -0700

    fix: update vim keybinding

commit 82b47134073a8107cc479477ad77ba4d143d804d
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 17:15:01 2021 -0700

    Revert "chore: remove vim fix"

    This reverts commit 92e95849cc34ea426d6eb95182018a1a4c38fd20.

commit 74a9476f23f27a03b769196d2fcb051e4eb82056
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 17:14:51 2021 -0700

    chore: fix lookup note name

commit 92e95849cc34ea426d6eb95182018a1a4c38fd20
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 16:52:41 2021 -0700

    chore: remove vim fix

commit 459d52a4ea7ddeb9ad419098f80279d364abcc59
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 16:49:19 2021 -0700

    fix: auto-gen all vscode package.json properties

commit 625572ddab6cf97abecc402b4c6d2b49642b7f87
Author: Kevin <kevin@dendron.so>
Date:   Mon Sep 27 16:48:52 2021 -0700

    fix: add vim keybinding override

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -4,7 +4,7 @@
   "displayName": "dendron",
   "description": "Dendron is a hierarchal note taking tool that grows as you do. ",
   "publisher": "dendron",
-  "version": "0.60.2",
+  "version": "0.60.3-alpha.0",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -51,7 +51,7 @@
         },
         {
           "id": "dendron.calendar-view",
-          "name": "Calendar",
+          "name": "Calendar View",
           "type": "webview"
         },
         {
@@ -79,7 +79,8 @@
       {
         "command": "dendron.backlinks.expandAll",
         "title": "Expand All",
-        "icon": "$(expand-all)"
+        "icon": "$(expand-all)",
+        "desc": "Expand all backlinks"
       },
       {
         "command": "dendron.browseNote",
@@ -139,7 +140,8 @@
       {
         "command": "dendron.insertNoteIndex",
         "title": "Dendron: Insert Note Index",
-        "desc": "Insert note index"
+        "desc": "Insert note index",
+        "when": "editorFocus && dendron:pluginActive"
       },
       {
         "command": "dendron.moveNote",
@@ -164,16 +166,22 @@
         "desc": "Rename a header, and update all links to it."
       },
       {
+        "command": "dendron.convertLink",
+        "title": "Dendron: Convert Link",
+        "desc": "Convert link candidate into backlink"
+      },
+      {
         "command": "dendron.lookupNote",
         "title": "Dendron: Lookup Note",
         "desc": "Initiate note lookup",
+        "docLink": "dendron.topic.lookup.md",
+        "docPreview": "",
         "when": "dendron:pluginActive"
       },
       {
         "command": "dendron.lookupSchema",
         "title": "Dendron: Lookup Schema",
         "desc": "Initiate schema lookup",
-        "when": "dendron:pluginActive",
         "docLink": "dendron.topic.lookup.md",
         "docPreview": "![](https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/schema-lookup.gif)"
       },
@@ -448,6 +456,30 @@
         "docPreview": ""
       },
       {
+        "command": "dendron.seedAdd",
+        "title": "Dendron: Add Seed to Workspace",
+        "desc": "Add a seed to the current workspace",
+        "docs": "",
+        "docLink": "",
+        "docPreview": ""
+      },
+      {
+        "command": "dendron.seedRemove",
+        "title": "Dendron: Remove Seed from Workspace",
+        "desc": "Remove a seed from the current workspace",
+        "docs": "",
+        "docLink": "",
+        "docPreview": ""
+      },
+      {
+        "command": "dendron.seedBrowse",
+        "title": "Dendron: Browse the Seed Registry",
+        "desc": "Browse and Add seeds from the Registry to the current workspace",
+        "docs": "",
+        "docLink": "",
+        "docPreview": ""
+      },
+      {
         "command": "dendron.dev.doctor",
         "title": "Dendron: Doctor",
         "desc": "Auto fix issues with frontmatter",
@@ -489,21 +521,6 @@
         "command": "dendron.launchTutorial",
         "title": "Dendron: Launch Tutorial",
         "desc": "Launch the Tutorial"
-      },
-      {
-        "command": "dendron.seedAdd",
-        "title": "Dendron: Seed Add",
-        "desc": "Add Seed to Current Workspace"
-      },
-      {
-        "command": "dendron.seedRemove",
-        "title": "Dendron: Seed Remove",
-        "desc": "Remove Seed from Current Workspace"
-      },
-      {
-        "command": "dendron.seedBrowse",
-        "title": "Dendron: Seed Browse",
-        "desc": "Browse the Seed Registry and Add Seeds to Current Workspace"
       }
     ],
     "menus": {
@@ -540,14 +557,14 @@
           "command": "dendron.moveNote",
           "group": "2_workspace"
         }
-      ] ,
+      ],
       "editor/context": [
         {
           "when": "editorHasSelection && dendron:pluginActive",
           "command": "dendron.renameHeader",
           "group": "2_workspace"
-        } 
-      ]  
+        }
+      ]
     },
     "configuration": {
       "title": "dendron",
@@ -812,8 +829,8 @@
     "deploy:ovsx": "ovsx publish --yarn"
   },
   "devDependencies": {
-    "@dendronhq/common-test-utils": "^0.60.2",
-    "@dendronhq/engine-test-utils": "^0.60.2",
+    "@dendronhq/common-test-utils": "^0.60.3-alpha.0",
+    "@dendronhq/engine-test-utils": "^0.60.3-alpha.0",
     "@sentry/webpack-plugin": "^1.17.1",
     "@types/execa": "^2.0.0",
     "@types/fs-extra": "^9.0.1",
@@ -838,12 +855,12 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.60.2",
-    "@dendronhq/common-all": "^0.60.2",
-    "@dendronhq/common-server": "^0.60.2",
-    "@dendronhq/dendron-cli": "^0.60.2",
-    "@dendronhq/engine-server": "^0.60.2",
-    "@dendronhq/pods-core": "^0.60.2",
+    "@dendronhq/api-server": "^0.60.3-alpha.0",
+    "@dendronhq/common-all": "^0.60.3-alpha.0",
+    "@dendronhq/common-server": "^0.60.3-alpha.0",
+    "@dendronhq/dendron-cli": "^0.60.3-alpha.0",
+    "@dendronhq/engine-server": "^0.60.3-alpha.0",
+    "@dendronhq/pods-core": "^0.60.3-alpha.0",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "@types/vscode": "1.58",
