--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -32,7 +32,7 @@ site:
     siteUrl: 'https://foo.dev.dendron.so'
     usePrettyRefs: true
     githubCname: 11ty.dendron.so
-    usePrettyLinks: true 
+    usePrettyLinks: true
     siteLastModified: true
     title: Dendron
     description: >-
@@ -58,7 +58,8 @@ site:
             - vaultThree
 dev:
     enableWebUI: true
-    nextServerUrl: 'http://localhost:3000'
+    enablePreviewV2: true
+    # nextServerUrl: 'http://localhost:3000'
     engineServerPort: 3005
 graph:
     zoomSpeed: 1
