--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -846,6 +846,7 @@
     "copy-webpack-plugin": "^6.0.4",
     "glob": "^7.1.6",
     "mocha": "^7.1.2",
+    "ovsx": "^0.2.1",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "vsce": "^1.100.0",
