--- a/packages/dendron-11ty/package.json
+++ b/packages/dendron-11ty/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-11ty-legacy",
-  "version": "0.61.0",
+  "version": "0.61.1-alpha.0",
   "main": "index.js",
   "license": "AGPLv3",
   "files": [
