--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "scripts": {
     "setup": "yarn && yarn bootstrap:bootstrap && yarn bootstrap:build && yarn setup:cli",
     "setup:cli": "./bootstrap/scripts/chmod-cli.js",
-    "setup:npmlogin": "npm-cli-login -u dendron -p temporarydendronpassword -e test@dendron.com -r http://localhost:4873",
+    "setup:npmlogin:local": "npm-cli-login -u dendron -p temporarydendronpassword -e test@dendron.com -r http://localhost:4873",
+    "setup:npmlogin:remote": "npm-cli-login -u $NPM_USERNAME -p $NPM_PWD -e $NPM_EMAIL -r https://registry.npmjs.org/",
     "build:prerelease:local": "cross-env UPGRADE_TYPE=prerelease PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
     "build:prerelease:remote": "cross-env UPGRADE_TYPE=prerelease PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
     "build:prerelease:remote:ci": "cross-env UPGRADE_TYPE=prerelease PUBLISH_ENDPOINT=remote BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
@@ -59,6 +60,7 @@
     "build:minor:local": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=local ./bootstrap/scripts/buildPatch.sh",
     "build:minor:local:ci": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=local BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
     "build:minor:remote": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=remote ./bootstrap/scripts/buildPatch.sh",
+    "build:minor:remote:ci": "cross-env UPGRADE_TYPE=minor PUBLISH_ENDPOINT=remote BUILD_ENV=ci ./bootstrap/scripts/buildPatch.sh",
     "gen:data": "node packages/dendron-cli/lib/bin/dendron-cli.js dev generate_json_schema_from_config",
     "cleanup": "./bootstrap/scripts/cleanup.sh",
     "release": "standard-version",
