fix: preview caching invalidation when notes with ![[ref]] links change (#1385)
* fix: preview caching invalidation when notes with ![[ref]] links change

* Add some shortcircuiting logic

* Address review comments

* fix: fix broken links and vault names inside preview cache invalidation

* fix: uncomment nextserverUrl in test workspace

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -32,7 +32,7 @@ site:
     siteUrl: 'https://foo.dev.dendron.so'
     usePrettyRefs: true
     githubCname: 11ty.dendron.so
-    usePrettyLinks: true 
+    usePrettyLinks: true
     siteLastModified: true
     title: Dendron
     description: >-
@@ -58,6 +58,7 @@ site:
             - vaultThree
 dev:
     enableWebUI: true
+    enablePreviewV2: true
     nextServerUrl: 'http://localhost:3000'
     engineServerPort: 3005
 graph:
