--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -4,7 +4,7 @@
   "displayName": "dendron",
   "description": "Dendron is a hierarchal note taking tool that grows as you do. ",
   "publisher": "dendron",
-  "version": "0.61.1-alpha.0",
+  "version": "0.61.1",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -834,8 +834,8 @@
     "deploy:ovsx": "ovsx publish --yarn"
   },
   "devDependencies": {
-    "@dendronhq/common-test-utils": "^0.61.1-alpha.0",
-    "@dendronhq/engine-test-utils": "^0.61.1-alpha.0",
+    "@dendronhq/common-test-utils": "^0.61.1",
+    "@dendronhq/engine-test-utils": "^0.61.1",
     "@sentry/webpack-plugin": "^1.17.1",
     "@types/execa": "^2.0.0",
     "@types/fs-extra": "^9.0.1",
@@ -861,12 +861,12 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.61.1-alpha.0",
-    "@dendronhq/common-all": "^0.61.1-alpha.0",
-    "@dendronhq/common-server": "^0.61.1-alpha.0",
-    "@dendronhq/dendron-cli": "^0.61.1-alpha.0",
-    "@dendronhq/engine-server": "^0.61.1-alpha.0",
-    "@dendronhq/pods-core": "^0.61.1-alpha.0",
+    "@dendronhq/api-server": "^0.61.1",
+    "@dendronhq/common-all": "^0.61.1",
+    "@dendronhq/common-server": "^0.61.1",
+    "@dendronhq/dendron-cli": "^0.61.1",
+    "@dendronhq/engine-server": "^0.61.1",
+    "@dendronhq/pods-core": "^0.61.1",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "@types/vscode": "1.58",
