--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -24,7 +24,7 @@
   "activationEvents": [
     "*"
   ],
-  "main": "./out/src/extension.js",
+  "main": "./dist/extension.js",
   "extensionPack": [
     "dendron.dendron-paste-image"
   ],
@@ -848,17 +848,19 @@
     "@types/open": "^6.2.1",
     "@types/open-graph-scraper": "^4.7.0",
     "@types/semver": "^7.3.1",
-    "copy-webpack-plugin": "^6.0.4",
+    "copy-webpack-plugin": "^9.0.1",
     "glob": "^7.1.6",
     "mocha": "^7.1.2",
+    "node-loader": "^2.0.0",
     "ovsx": "^0.2.1",
+    "source-map-loader": "^3.0.0",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "vsce": "^1.100.0",
     "vscode-test": "^1.3.0",
-    "webpack": "^4.43.0",
+    "webpack": "^5.56.0",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "@dendronhq/api-server": "^0.61.1",
