--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -850,6 +850,7 @@
     "@types/semver": "^7.3.1",
     "copy-webpack-plugin": "^9.0.1",
     "glob": "^7.1.6",
+        "ignore-loader": "^0.1.2",
     "mocha": "^7.1.2",
     "node-loader": "^2.0.0",
     "ovsx": "^0.2.1",
