chore: skip sentry in dev mode

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -821,9 +821,9 @@
   "icon": "assets/images/logo.png",
   "scripts": {
     "vscode:prepublish": "yarn webpack:prod && ./scripts/varSub.sh",
-    "webpack": "webpack --mode development",
+    "webpack": "cross-env SKIP_SENTRY=1 webpack --mode development",
     "webpack:prod": "webpack --mode production",
-    "webpack:dev:watch": "webpack --mode development --watch",
+    "webpack:dev:watch": "yarn webpack --watch",
     "watch": "yarn compile --watch",
     "build": "yarn compile",
     "compile": "tsc -p tsconfig.build.json",
@@ -849,8 +849,9 @@
     "@types/open-graph-scraper": "^4.7.0",
     "@types/semver": "^7.3.1",
     "copy-webpack-plugin": "^9.0.1",
+    "cross-env": "^7.0.3",
     "glob": "^7.1.6",
-        "ignore-loader": "^0.1.2",
+    "ignore-loader": "^0.1.2",
     "mocha": "^7.1.2",
     "node-loader": "^2.0.0",
     "ovsx": "^0.2.1",
