chore: patch pkgjson

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -24,7 +24,7 @@
   "activationEvents": [
     "*"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/src/extension.js",
   "extensionPack": [
     "dendron.dendron-paste-image"
   ],
