--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -4,7 +4,7 @@
   "displayName": "dendron",
   "description": "Dendron is a hierarchal note taking tool that grows as you do. ",
   "publisher": "dendron",
-  "version": "0.61.1",
+  "version": "0.61.2",
   "engines": {
     "vscode": "^1.54.0"
   },
@@ -821,9 +821,9 @@
   "icon": "assets/images/logo.png",
   "scripts": {
     "vscode:prepublish": "yarn webpack:prod && ./scripts/varSub.sh",
-    "webpack": "webpack --mode development",
+    "webpack": "cross-env SKIP_SENTRY=1 webpack --mode development",
     "webpack:prod": "webpack --mode production",
-    "webpack:dev:watch": "webpack --mode development --watch",
+    "webpack:dev:watch": "yarn webpack --watch",
     "watch": "yarn compile --watch",
     "build": "yarn compile",
     "compile": "tsc -p tsconfig.build.json",
@@ -834,8 +834,8 @@
     "deploy:ovsx": "ovsx publish --yarn"
   },
   "devDependencies": {
-    "@dendronhq/common-test-utils": "^0.61.1",
-    "@dendronhq/engine-test-utils": "^0.61.1",
+    "@dendronhq/common-test-utils": "^0.61.2",
+    "@dendronhq/engine-test-utils": "^0.61.2",
     "@sentry/webpack-plugin": "^1.17.1",
     "@types/execa": "^2.0.0",
     "@types/fs-extra": "^9.0.1",
@@ -848,25 +848,29 @@
     "@types/open": "^6.2.1",
     "@types/open-graph-scraper": "^4.7.0",
     "@types/semver": "^7.3.1",
-    "copy-webpack-plugin": "^6.0.4",
+    "copy-webpack-plugin": "^9.0.1",
+    "cross-env": "^7.0.3",
     "glob": "^7.1.6",
+    "ignore-loader": "^0.1.2",
     "mocha": "^7.1.2",
+    "node-loader": "^2.0.0",
     "ovsx": "^0.2.1",
+    "source-map-loader": "^3.0.0",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "vsce": "^1.100.0",
     "vscode-test": "^1.3.0",
-    "webpack": "^4.43.0",
+    "webpack": "^5.56.0",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
-    "@dendronhq/api-server": "^0.61.1",
-    "@dendronhq/common-all": "^0.61.1",
-    "@dendronhq/common-server": "^0.61.1",
-    "@dendronhq/dendron-cli": "^0.61.1",
-    "@dendronhq/engine-server": "^0.61.1",
-    "@dendronhq/pods-core": "^0.61.1",
+    "@dendronhq/api-server": "^0.61.2",
+    "@dendronhq/common-all": "^0.61.2",
+    "@dendronhq/common-server": "^0.61.2",
+    "@dendronhq/dendron-cli": "^0.61.2",
+    "@dendronhq/engine-server": "^0.61.2",
+    "@dendronhq/pods-core": "^0.61.2",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "@types/vscode": "1.58",
