spike: added refactor extract for editor

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -565,8 +565,8 @@
       ],
       "editor/context": [
         {
-          "when": "editorHasSelection && dendron:pluginActive",
-          "command": "dendron.renameHeader",
+          "when": "resourceExtname == .md && dendron:pluginActive",
+          "command": "dendron.copyNoteLink",
           "group": "2_workspace"
         }
       ]
