--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -821,9 +821,9 @@
   "icon": "assets/images/logo.png",
   "scripts": {
     "vscode:prepublish": "yarn webpack:prod && ./scripts/varSub.sh",
-    "webpack": "cross-env SKIP_SENTRY=1 webpack --mode development",
-    "webpack:prod": "webpack --mode production",
+        "webpack": "cross-env SKIP_SENTRY=1 webpack --config webpack.dev.js",
     "webpack:dev:watch": "yarn webpack --watch",
+        "webpack:prod": "webpack --config webpack.prod.js",
     "watch": "yarn compile --watch",
     "build": "yarn compile",
     "compile": "tsc -p tsconfig.build.json",
@@ -856,13 +856,15 @@
     "node-loader": "^2.0.0",
     "ovsx": "^0.2.1",
     "source-map-loader": "^3.0.0",
+        "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "vsce": "^1.100.0",
     "vscode-test": "^1.3.0",
     "webpack": "^5.56.0",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.8.0"
+        "webpack-cli": "^4.8.0",
+        "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@dendronhq/api-server": "^0.62.0",
