chore(build): enable manual run for nightly
Squashed commit of the following:

commit 29781eba3481330047710c933cf1ed9170cc6b08
Author: Kevin <kevin@dendron.so>
Date:   Tue Oct 5 14:26:05 2021 -0700

    chore: allow manual runs

commit 292f373107da9de72d8a43350c2dd1bf62b4a538
Author: Kevin <kevin@dendron.so>
Date:   Tue Oct 5 14:22:07 2021 -0700

    chore: check nightly workflow

--- a/.github/workflows/publish-extension-nightly.yml
+++ b/.github/workflows/publish-extension-nightly.yml
@@ -6,14 +6,13 @@ name: Publish Extension - Nightly
 # See documentation on POSIX cron syntax here: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
 # Scheduled to run every weekday at 12:00 AM PST, which is 7:00 AM UTC Tuesday-Saturday
 on:
+  workflow_dispatch:
   schedule:
     - cron:  '0 7 * * 2-6'
 
 jobs:
   build:
     environment: plugin-production
-    strategy:
-      fail-fast: true
 
     timeout-minutes: 30
 
