--- a/.github/workflows/publish-extension-dendron.yml
+++ b/.github/workflows/publish-extension-dendron.yml
@@ -39,17 +39,20 @@ jobs:
       - name: Yarn Setup
         run: yarn setup
 
+      - name: Set Environment Variables
+        run: |
+          echo "DENDRON_RELEASE_VERSION=`cat meta.json | jq -r '.["@dendronhq/plugin-core"]' | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{$NF=sprintf("%0*d", length($NF), ($NF+1)); print}'`" >> $GITHUB_ENV
+          echo "GOOGLE_OAUTH_CLIENT_SECRET=${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}" >> $GITHUB_ENV
+          echo "GOOGLE_OAUTH_CLIENT_ID=${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}" >> $GITHUB_ENV
+          echo "NODE_OPTIONS=--max_old_space_size=4096" >> $GITHUB_ENV
+
       - name: Build the VSIX and Publish to NPM Registry
         env:
-          GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
-          GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           NPM_EMAIL: ${{ secrets.NPM_EMAIL }}
           NPM_USERNAME: ${{ secrets.NPM_USERNAME }}
           NPM_PWD: ${{ secrets.NPM_PWD }}
-          NODE_OPTIONS: --max_old_space_size=4096
         run: |
-          echo "DENDRON_RELEASE_VERSION=`cat meta.json | jq -r '.["@dendronhq/plugin-core"]' | awk -F. -v OFS=. 'NF>1{$(NF-1)=sprintf("%0*d", length($(NF-1)), ($(NF-1)+1)); $NF=0; print}'`" >> $GITHUB_ENV
           yarn build:minor:remote:ci
 
       - name: Upload VSIX Artifact
@@ -59,8 +62,6 @@ jobs:
           path: ./packages/plugin-core/*.vsix
 
       - name: Prepare Package Manifest
-        env:
-          NODE_OPTIONS: --max_old_space_size=4096
         run: |
           DENDRON_CLI=./packages/dendron-cli/lib/bin/dendron-cli.js
           LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget dendron
@@ -71,16 +72,12 @@ jobs:
       - name: Publish to VS Code Marketplace
         env:
           VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
-          NODE_OPTIONS: --max_old_space_size=4096
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         working-directory: ./packages/plugin-core
         run: yarn deploy:vscode
 
       - name: Publish to Open VSX Marketplace
         env:
           OVSX_PAT: ${{ secrets.VSCODIUM_PUBLISH_PWD }}
-          NODE_OPTIONS: --max_old_space_size=4096
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         working-directory: ./packages/plugin-core
         run: yarn deploy:ovsx
 
