--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -4,12 +4,15 @@
 # release.
 name: Proto
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - proto/*
 
 jobs:
   build:
-    environment: plugin-production
-    timeout-minutes: 10
+    environment: plugin-development
+    timeout-minutes: 30
     runs-on: ubuntu-latest
 
     steps:
@@ -32,12 +35,68 @@ jobs:
         with:
           node-version:  14.x
 
-      - name: Init workspace
-        run: yarn -W
+      - name: Yarn Setup
+        run: yarn setup
 
-      # - name: Yarn Setup
-      #   run: yarn setup
-
-      - name: Login to NPM
+      - name: Set Up Yarn Local Registry
+        run: yarn config set registry http://localhost:4873
+      
+      - name: Set Up NPM Local Registry
+        run: npm set registry http://localhost:4873/
+      
+      - name: Build the VSIX
+        env: 
+          GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
+          GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: |
-          yarn setup:npmlogin:remote
+          echo "DENDRON_RELEASE_VERSION=`cat meta.json | jq -r '.["@dendronhq/plugin-core"]' | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{$NF=sprintf("%0*d", length($NF), ($NF+1)); print}'`" >> $GITHUB_ENV
+          yarn build:patch:local:ci
+
+      - name: Upload VSIX Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: vsix
+          path: ./packages/plugin-core/*.vsix
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.DENDRON_BOT_S3_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DENDRON_BOT_S3_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Publish VSIX to S3
+        run: |
+          version=`cat ./packages/plugin-core/package.json | jq ".version" -r`
+          name=`cat ./packages/plugin-core/package.json | jq ".displayName" -r`
+          package="$name-$version.vsix"
+          echo $package
+          BUCKET=org-dendron-public-assets
+          aws s3 cp --acl public-read ./packages/plugin-core/$package s3://$BUCKET/publish/$package
+          echo https://$BUCKET.s3.amazonaws.com/publish/$package
+        if: ${{ !endswith(github.ref, 'publish') }}
+
+      - name: Publish
+        if: ${{ endswith(github.ref, 'publish') }}
+        run: |
+          DENDRON_CLI=./packages/dendron-cli/lib/bin/dendron-cli.js
+          LOG_LEVEL=info $DENDRON_CLI dev prep_plugin --extensionTarget dendron
+
+      - name: Publish to VS Code Marketplace
+        if: ${{ endswith(github.ref, 'publish') }}
+        env:
+          VSCE_PAT: ${{ secrets.VSCODE_PUBLISH_PWD }}
+          OVSX_PAT: ${{ secrets.VSCODIUM_PUBLISH_PWD }}
+        working-directory: ./packages/plugin-core
+        run: |
+          yarn deploy:vscode
+          yarn deploy:ovsx
+
+      - name: Tag Release on Github
+        run: | 
+          git reset --hard
+          git clean -f
+          git tag $DENDRON_RELEASE_VERSION
+          git push --tags
+          git push
