--- a/.github/workflows/create-prerelease-image.yml
+++ b/.github/workflows/create-prerelease-image.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    environment: plugin-development
+    environment: plugin-production
     timeout-minutes: 30
     runs-on: ubuntu-latest
 
@@ -43,6 +43,14 @@ jobs:
       
       - name: Set Up NPM Local Registry
         run: npm set registry http://localhost:4873/
+
+      - name: Set Environment Variables
+        run: |
+          echo "DENDRON_RELEASE_VERSION=`cat meta.json | jq -r '.["@dendronhq/plugin-core"]' | awk -F. -v OFS=. 'NF==1{print ++$NF}; NF>1{$NF=sprintf("%0*d", length($NF), ($NF+1)); print}'`" >> $GITHUB_ENV
+          echo "GOOGLE_OAUTH_CLIENT_SECRET=${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}" >> $GITHUB_ENV
+          echo "GOOGLE_OAUTH_CLIENT_ID=${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}" >> $GITHUB_ENV
+          echo "SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}" >> $GITHUB_ENV
+          echo "NODE_OPTIONS=--max_old_space_size=4096" >> $GITHUB_ENV 
       
       - name: Build the VSIX
         env: 
