chore: disable extension when running from webpack

--- a/packages/plugin-core/.vscode/launch.json
+++ b/packages/plugin-core/.vscode/launch.json
@@ -66,7 +66,8 @@
       "request": "launch",
       "runtimeExecutable": "${execPath}",
       "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}"
+        "--extensionDevelopmentPath=${workspaceFolder}",
+        "--disable-extensions"
       ],
       "outFiles": ["${workspaceFolder:plugin-core}/dist/*.js"],
       "env": {
