--- a/packages/dendron-cli/package.json
+++ b/packages/dendron-cli/package.json
@@ -50,6 +50,7 @@
     "fs-extra": "^9.0.1",
     "gray-matter": "^4.0.2",
     "lodash": "^4.17.19",
+    "ora": "5.4.1",
     "prompts": "^2.4.1",
     "rsync": "^0.6.1",
     "ts-json-schema-generator": "^0.95.0",
