--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -554,19 +554,14 @@
         },
         {
           "when": "resourceExtname == .md && dendron:pluginActive",
-          "command": "dendron.renameNote",
-          "group": "2_workspace"
-        },
-        {
-          "when": "resourceExtname == .md && dendron:pluginActive",
           "command": "dendron.moveNote",
           "group": "2_workspace"
         }
       ],
       "editor/context": [
         {
-          "when": "editorHasSelection && dendron:pluginActive",
-          "command": "dendron.renameHeader",
+          "when": "resourceExtname == .md && dendron:pluginActive",
+          "command": "dendron.copyNoteLink",
           "group": "2_workspace"
         }
       ]
