--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/api-server",
-  "version": "0.63.1",
+  "version": "0.63.4-alpha.0",
   "description": "",
   "license": "GPLv3",
   "repository": {
@@ -57,9 +57,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.63.1",
-    "@dendronhq/common-server": "^0.63.1",
-    "@dendronhq/engine-server": "^0.63.1",
+    "@dendronhq/common-all": "^0.63.4-alpha.0",
+    "@dendronhq/common-server": "^0.63.4-alpha.0",
+    "@dendronhq/engine-server": "^0.63.4-alpha.0",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "cors": "^2.8.5",
@@ -81,5 +81,5 @@
     ],
     "exec": "ts-node --log-error ./src/start.ts"
   },
-  "gitHead": "d2e0e1c5ada1ac4a507e2da387cf761316de76de"
+  "gitHead": "b9b209acf808ad7a581bf98b1d0f90ef2bf4b833"
 }
