--- a/packages/pods-core/package.json
+++ b/packages/pods-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/pods-core",
-  "version": "0.63.1",
+  "version": "0.63.4-alpha.0",
   "description": "pods-core",
   "license": "GPLv3",
   "repository": {
@@ -50,9 +50,9 @@
   },
   "dependencies": {
     "@dendronhq/airtable": "^0.11.1",
-    "@dendronhq/common-all": "^0.63.1",
-    "@dendronhq/common-server": "^0.63.1",
-    "@dendronhq/engine-server": "^0.63.1",
+    "@dendronhq/common-all": "^0.63.4-alpha.0",
+    "@dendronhq/common-server": "^0.63.4-alpha.0",
+    "@dendronhq/engine-server": "^0.63.4-alpha.0",
     "@instantish/martian": "^1.0.3",
     "@notionhq/client": "^0.1.9",
     "@octokit/graphql": "^4.6.4",
@@ -70,5 +70,5 @@
     "through2": "^4.0.2",
     "vscode-uri": "^2.1.2"
   },
-  "gitHead": "d2e0e1c5ada1ac4a507e2da387cf761316de76de"
+  "gitHead": "b9b209acf808ad7a581bf98b1d0f90ef2bf4b833"
 }
