enhance: allow configuration of workspace to make 'Create New' not bubble up in note lookup.

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -11,6 +11,7 @@ vaults:
 useFMTitle: true
 useNoteTitleForLink: true
 autoFoldFrontmatter: true
+# lookupDontBubbleUpCreateNew: true
 lookupConfirmVaultOnCreate: true
 mermaid: true
 useKatex: true
