--- a/packages/common-all/package.json
+++ b/packages/common-all/package.json
@@ -36,6 +36,8 @@
     "test:watch": "echo 0"
   },
   "dependencies": {
+    "@sentry/integrations": "^6.13.3",
+    "@sentry/node": "^6.13.3",
     "@types/github-slugger": "^1.3.0",
     "@types/lodash": "^4.14.152",
     "@types/luxon": "^1.25.0",
