--- a/packages/common-server/package.json
+++ b/packages/common-server/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "@dendronhq/common-all": "^0.63.4-alpha.0",
+    "@sentry/integrations": "^6.13.3",
+    "@sentry/node": "^6.13.3",
     "@types/analytics-node": "^3.1.4",
     "@types/execa": "^2.0.0",
     "@types/express": "^4.17.11",
