--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -1,26 +1,8 @@
-version: 1
-vaults:
-    -
-        fsPath: vault3
-        name: vaultThree
-    -
-        fsPath: vault2
-        visibility: private
-    -
-        fsPath: vault
+version: 3
 useFMTitle: true
 useNoteTitleForLink: true
-autoFoldFrontmatter: true
-# lookupDontBubbleUpCreateNew: true
-lookupConfirmVaultOnCreate: true
 mermaid: true
 useKatex: true
-journal:
-    dailyDomain: daily
-    name: journal
-    dateFormat: y.MM.dd
-    addBehavior: childOfCurrent
-    firstDayOfWeek: 1
 site:
     copyAssets: true
     siteHierarchies:
@@ -60,13 +42,48 @@ site:
 dev:
     enableWebUI: true
     enablePreviewV2: true
-    nextServerUrl: 'http://localhost:3000'
-    engineServerPort: 3005
-graph:
-    zoomSpeed: 1
-initializeRemoteVaults: true
-dendronVersion: 0.51.2
-scratch:
-    name: scratch
-    dateFormat: y.MM.dd.HHmmss
-    addBehavior: asOwnDomain
+    # nextServerUrl: 'http://localhost:3000'
+    # engineServerPort: 3005
+commands:
+    lookup:
+        note:
+            selectionMode: extract
+            confirmVaultOnCreate: true
+            leaveTrace: false
+    insertNote:
+        initialValue: templates
+    insertNoteLink:
+        aliasMode: none
+        enableMultiSelect: false
+    insertNoteIndex:
+        enableMarker: false
+    randomNote: {}
+workspace:
+    dendronVersion: 0.64.1
+    vaults:
+        -
+            fsPath: vault3
+            name: vaultThree
+        -
+            fsPath: vault2
+            visibility: private
+        -
+            fsPath: vault
+    journal:
+        dailyDomain: daily
+        name: journal
+        dateFormat: y.MM.dd
+        addBehavior: childOfCurrent
+    scratch:
+        name: scratch
+        dateFormat: y.MM.dd.HHmmss
+        addBehavior: asOwnDomain
+    graph:
+        zoomSpeed: 1
+    enableAutoCreateOnDefinition: false
+    enableXVaultWikiLink: false
+    enableRemoteVaultInit: true
+    workspaceVaultSyncMode: noCommit
+    enableAutoFoldFrontmatter: true
+    maxPreviewsCached: 10
+    maxNoteLength: 204800
