chore: add missing default configs to dendron.yml

--- a/test-workspace/dendron.yml
+++ b/test-workspace/dendron.yml
@@ -87,3 +87,5 @@ workspace:
     enableAutoFoldFrontmatter: true
     maxPreviewsCached: 10
     maxNoteLength: 204800
+noLegacyNoteRef: true
+usePrettyRefs: true
