--- a/packages/pods-core/package.json
+++ b/packages/pods-core/package.json
@@ -61,9 +61,10 @@
     "ajv": "^8.6.0",
     "ajv-formats": "^2.1.0",
     "csv-writer": "^1.6.0",
-    "docs-markdown": "^1.2.0",
     "emailjs": "^3.4.0",
     "fs-extra": "^9.0.1",
+    "googleapis": "^88.2.0",
+    "image-downloader": "^4.0.3",
     "klaw": "^3.0.0",
     "limiter": "^2.1.0",
     "lodash": "^4.17.20",
