--- a/.github/workflows/create-release-image.yml
+++ b/.github/workflows/create-release-image.yml
@@ -47,6 +47,10 @@ jobs:
       - name: Set Up NPM Local Registry
         run: npm set registry http://localhost:4873/
       
+      - name: Clear Verdaccio Cache
+        run: |
+          if [ -d ~/.config/verdaccio/storage/@dendronhq ]; then echo "Clearing Existing Verdaccio Cache" && rm -Rf ~/.config/verdaccio/storage/@dendronhq; fi
+
       - name: Build the VSIX
         env: 
           GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
