--- a/packages/dendron-11ty/package.json
+++ b/packages/dendron-11ty/package.json
@@ -23,6 +23,7 @@
   "installConfig": {
     "hoistingLimits": "none"
   },
+  "resolutions": { "**/ua-parser-js": "0.7.28" },
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
