--- a/packages/dendron-11ty/package.json
+++ b/packages/dendron-11ty/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/dendron-11ty-legacy",
-  "version": "0.64.1",
+  "version": "0.64.2",
   "main": "index.js",
   "license": "AGPLv3",
   "files": [
@@ -23,14 +23,16 @@
   "installConfig": {
     "hoistingLimits": "none"
   },
-  "resolutions": { "**/ua-parser-js": "0.7.28" },
+  "resolutions": {
+    "**/ua-parser-js": "0.7.28"
+  },
   "dependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-    "@dendronhq/common-all": "^0.64.1",
-    "@dendronhq/common-server": "^0.64.1",
+    "@dendronhq/common-all": "^0.64.2",
+    "@dendronhq/common-server": "^0.64.2",
     "@dendronhq/eleventy-plugin-seo": "^0.6.0",
-    "@dendronhq/engine-server": "^0.64.1",
+    "@dendronhq/engine-server": "^0.64.2",
     "@fec/eleventy-plugin-remark": "^2.1.0",
     "eleventy-xml-plugin": "^0.1.0",
     "fs-extra": "^9.0.1",
