--- a/packages/engine-server/package.json
+++ b/packages/engine-server/package.json
@@ -94,7 +94,8 @@
     "unist-util-select": "^3.0.1",
     "unist-util-visit": "^2.0.3",
     "vscode-uri": "^2.1.2",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "ora": "5.4.1"
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
