feat(notes): task notes (create modifier & editor highlighting) (#1583)
* feat: Note lookup modifier for creating task notes

* feat: Editor highlighting for task notes

* chore: tests for task note modifier & editor highlights

* chore: correct bad config desc

* spike: create task as child of current note

* spike: implement task note feedback

* spike: rename command & default task status symbols

--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -198,6 +198,13 @@
         "docPreview": ""
       },
       {
+        "command": "dendron.createTask",
+        "title": "Dendron: Create Task Note",
+        "desc": "Create a task note.",
+        "docLink": "dendron.topic.tasks.md",
+        "docPreview": ""
+      },
+      {
         "command": "dendron.archiveHierarchy",
         "title": "Dendron: Archive Hierarchy",
         "desc": "Move current note and all children under the `archive` hierarchy",
