--- a/packages/dendron-plugin-views/package.json
+++ b/packages/dendron-plugin-views/package.json
@@ -93,7 +93,8 @@
     "start": "node scripts/start.js",
     "build:prod": "node scripts/build.js",
     "build:dev": "env BUILD_DEV=1 node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "echo 0",
+    "test-local": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": [
