--- a/packages/plugin-core/package.json
+++ b/packages/plugin-core/package.json
@@ -564,6 +564,16 @@
         "command": "dendron.launchTutorial",
         "title": "Dendron: Launch Tutorial",
         "desc": "Launch the Tutorial"
+      },
+      {
+        "command": "dendron.registerNoteType",
+        "title": "Dendron: Register Note Type",
+        "desc": "Register a new Note Type"
+      },
+      {
+        "command": "dendron.createCustomTypedNote",
+        "title": "Dendron: Create Note with Custom Type",
+        "desc": "Create a New Note with a User-Defined Type Applied"
       }
     ],
     "menus": {
