--- a/packages/nextjs-template/package.json
+++ b/packages/nextjs-template/package.json
@@ -15,7 +15,8 @@
     "lint": "next lint",
     "export": "next build && next export",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "postbuild": "next-sitemap --config sitemap.js"
+    "postbuild": "next-sitemap --config sitemap.js",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
@@ -39,9 +40,13 @@
     "@next/bundle-analyzer": "^11.1.2",
     "@types/fs-extra": "^9.0.12",
     "@types/react": "^17.0.21",
+    "cypress": "^8.7.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "fs-extra": "^10.0.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.3"
   }
 }
