--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          build: yarn run build
-          start: yarn start
+          build: yarn run cypress-build
+          start: yarn cypress-start
