--- a/packages/common-server/package.json
+++ b/packages/common-server/package.json
@@ -51,6 +51,8 @@
     "@types/spark-md5": "^3.0.2",
     "@types/tmp": "^0.2.0",
     "analytics-node": "^5.1.0",
+    "ajv": "^8.6.0",
+    "ajv-errors": "^3.0.0",
     "comment-json": "^4.1.0",
     "execa": "^5.0.0",
     "fs-extra": "^9.0.1",
