change tsconfig in cypress folder

--- a/packages/nextjs-template/cypress/tsconfig.json
+++ b/packages/nextjs-template/cypress/tsconfig.json
@@ -1,11 +1,10 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "noEmit": true,
-    "isolatedModules": false,
-    // be explicit about types included
-    // to avoid clashing with Jest types
+    "strict": true,
+    "baseUrl": "../node_modules",
+    "target": "es5",
+    "lib": ["es5", "dom"],
     "types": ["cypress"]
   },
-  "include": ["../node_modules/cypress", "./**/*.ts"]
+  "include": ["**/*.ts"]
 }
