--- a/packages/nextjs-template/cypress/tsconfig.json
+++ b/packages/nextjs-template/cypress/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": "../node_modules",
+    "isolatedModules": false,
     "target": "es5",
     "lib": ["es5", "dom"],
     "types": ["cypress"]
