--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "ci:init": "yarn bootstrap:bootstrap && yarn bootstrap:build",
     "ci:test:cli": "npx lerna run test --ignore @dendronhq/plugin-core --parallel --stream -- -- --forceExit",
     "ci:test:plugin": "npx lerna run test --scope @dendronhq/plugin-core --stream",
-    "cypress-build" :"yarn --cwd packages/nextjs-template run build",
-    "cypress-start" :"yarn --cwd packages/nextjs-template run start",
+    "cypress:open" :"yarn --cwd packages/nextjs-template run build",
+    "cypress:run" :"yarn --cwd packages/nextjs-template run cypress:run",
     "watch": "npx lerna exec --scope $pkg -- tsc -p tsconfig.build.json --watch",
     "hooks:pre-commit": "node ./hooks/pre-commit.js",
     "hooks:pre-push": "node ./hooks/pre-push.js",
